# ai-interview-assistant

./: .dockerignore  .envrc  .gitignore  .test_migration_env  README.md  README.zh-CN.md  README_zh.md  alembic.ini  docker-compose.yaml  env.example  init.sql  main.py  migration_sanity_check.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 147142e552b6_create_initial_tables.py  15fabd3ea79e_ensure_interview_log_and_relations_for_.py  1bfba25a1af9_set_null_on_delete_for_interviewlog_.py  3b925d63416d_create_interview_logs_and_reports_.py  3ee062c1afd0_sync_models_with_stamped_head.py  5162381b95eb_create_interview_logs_and_reports_.py  5f34d4e74e62_add_conversation_log_to_interviews.py  60149994d9c7_add_source_dialogue_to_reports.py  6d72a0398d8b_add_speaker_role_to_interview_log.py  770db16e4252_add_analyzed_description_to_jobs_table.py  bdedce939ef8_add_structured_resume_info_to_.py
app/: Dockerfile  entrypoint.sh  main.py  wait_for_db.py
app/api/v1/: schemas.py
app/api/v1/endpoints/: candidates.py  interviews.py  jobs.py
app/api/v1/schemas/: __init__.py  ag_ui_events.py  schemas.py
app/core/: config.py  openai_client.py  prompts.py
app/db/: models.py  session.py
app/services/: ai_report_generator.py  ai_services.py
app/utils/: json_parser.py
static/: test_sse_client.html
streamlit_app/: 00_Home.py  Dockerfile  __init__.py  app_navigator.py  core_ui_config.py
streamlit_app/pages/: 01_Job_Management.py  02_Candidate_Management.py  03_Interview_Management.py  04_Interview_Logging.py  05_Report_Generation_and_Viewing.py
streamlit_app/utils/: __init__.py  api_client.py  logger_config.py  ui_helpers.py
tests/: call_llm.py  conftest.py
tests/api/v1/: test_candidates.py  test_interviews.py  test_interviews_isolated.py  test_jobs.py
